--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,13 @@
 name = "Binutils_jll"
 uuid = "489e263e-5428-50b0-a723-147a141b401e"
-version = "2.38.0+2"
+version = "2.41.2"
 
 [deps]
-JLLWrappers = "692b3bcd-3c85-4b1f-b108-f13ce0eb3210"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Zlib_jll = "83775a58-1f1d-513f-b197-d71354ab007a"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+LazyJLLWrappers = "21706172-204c-4d4f-5420-656854206f44"
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 
 [compat]
-JLLWrappers = "1.2.0"
 julia = "1.6"
+LazyJLLWrappers = "1.0.0"
